{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 359,
  "lineage": "2cceddc0-e5cb-8a94-2330-959edecd6e6e",
  "resources": [
    {
      "module": "module.Tf_vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06783fe27b19018a0",
            "arn": "arn:aws:ec2:eu-north-1:387052708321:instance/i-09cdff47dbe2fe3ca",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09cdff47dbe2fe3ca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f7dd7d003147b1ca",
            "private_dns": "ip-10-0-1-130.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0f95bf58367b0cce2",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc14758ac5645690",
            "tags": {
              "Name": "Test-NAT-Instance"
            },
            "tags_all": {
              "Name": "Test-NAT-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08754053476842927"
            ]
          },
          "dependencies": [
            "module.Tf_vpc.aws_subnet.subnets1",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.Tf_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:internet-gateway/igw-08bc0df3363adc341",
            "id": "igw-08bc0df3363adc341",
            "owner_id": "387052708321",
            "vpc_id": "vpc-0664421df0a6d1c62"
          },
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.Tf_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:route-table/rtb-0855c7c82f9a13f5f",
            "id": "rtb-0855c7c82f9a13f5f",
            "owner_id": "387052708321",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0664421df0a6d1c62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.Tf_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:route-table/rtb-0ce46fa596bdbe991",
            "id": "rtb-0ce46fa596bdbe991",
            "owner_id": "387052708321",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08bc0df3363adc341",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0664421df0a6d1c62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Tf_vpc.aws_internet_gateway.igw1",
            "module.Tf_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.Tf_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rpri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e4495175c5cb6ae",
            "route_table_id": "rtb-0855c7c82f9a13f5f",
            "subnet_id": "subnet-0398a7b1869d0b65d"
          },
          "dependencies": [
            "module.Tf_vpc.aws_route_table.private1",
            "module.Tf_vpc.aws_subnet.subnets2",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e51fee14d5a6995",
            "route_table_id": "rtb-0855c7c82f9a13f5f",
            "subnet_id": "subnet-0f6a5e255bf076d87"
          },
          "dependencies": [
            "module.Tf_vpc.aws_route_table.private1",
            "module.Tf_vpc.aws_subnet.subnets2",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1c30e52a118989c",
            "route_table_id": "rtb-0855c7c82f9a13f5f",
            "subnet_id": "subnet-0a0e1200240067109"
          },
          "dependencies": [
            "module.Tf_vpc.aws_route_table.private1",
            "module.Tf_vpc.aws_subnet.subnets2",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.Tf_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rpub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07024138af21daee8",
            "route_table_id": "rtb-0ce46fa596bdbe991",
            "subnet_id": "subnet-0bc14758ac5645690"
          },
          "dependencies": [
            "module.Tf_vpc.aws_internet_gateway.igw1",
            "module.Tf_vpc.aws_route_table.public1",
            "module.Tf_vpc.aws_subnet.subnets1",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa92eba4744379f1",
            "route_table_id": "rtb-0ce46fa596bdbe991",
            "subnet_id": "subnet-040eec84c3684185b"
          },
          "dependencies": [
            "module.Tf_vpc.aws_internet_gateway.igw1",
            "module.Tf_vpc.aws_route_table.public1",
            "module.Tf_vpc.aws_subnet.subnets1",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8f8c31866dae869",
            "route_table_id": "rtb-0ce46fa596bdbe991",
            "subnet_id": "subnet-0e6d915b6be139814"
          },
          "dependencies": [
            "module.Tf_vpc.aws_internet_gateway.igw1",
            "module.Tf_vpc.aws_route_table.public1",
            "module.Tf_vpc.aws_subnet.subnets1",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.Tf_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:subnet/subnet-0bc14758ac5645690",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc14758ac5645690",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "387052708321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0664421df0a6d1c62"
          },
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:subnet/subnet-040eec84c3684185b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040eec84c3684185b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "387052708321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0664421df0a6d1c62"
          },
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:subnet/subnet-0e6d915b6be139814",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6d915b6be139814",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "387052708321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0664421df0a6d1c62"
          },
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.Tf_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:subnet/subnet-0398a7b1869d0b65d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0398a7b1869d0b65d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "387052708321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0664421df0a6d1c62"
          },
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:subnet/subnet-0f6a5e255bf076d87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6a5e255bf076d87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "387052708321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0664421df0a6d1c62"
          },
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:subnet/subnet-0a0e1200240067109",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0e1200240067109",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "387052708321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0664421df0a6d1c62"
          },
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.Tf_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:vpc/vpc-0664421df0a6d1c62",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-026d8fc0d663ab28f",
            "default_route_table_id": "rtb-01447d8d3b14391f1",
            "default_security_group_id": "sg-08754053476842927",
            "dhcp_options_id": "dopt-036290a5568529468",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0664421df0a6d1c62",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01447d8d3b14391f1",
            "owner_id": "387052708321",
            "tags": {
              "Location": "HYD",
              "Name": "Tag Test"
            },
            "tags_all": {
              "Location": "HYD",
              "Name": "Tag Test"
            }
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "Applb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:loadbalancer/app/ALB/6d26af07f67e87ae",
            "arn_suffix": "app/ALB/6d26af07f67e87ae",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-1121977515.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:loadbalancer/app/ALB/6d26af07f67e87ae",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00ed7d6e009e9d356"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-040eec84c3684185b"
              },
              {
                "subnet_id": "subnet-0bc14758ac5645690"
              },
              {
                "subnet_id": "subnet-0e6d915b6be139814"
              }
            ],
            "subnets": [
              "subnet-040eec84c3684185b",
              "subnet-0bc14758ac5645690",
              "subnet-0e6d915b6be139814"
            ],
            "vpc_id": "vpc-0664421df0a6d1c62",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "module.Tf_vpc.aws_subnet.subnets1",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:listener/app/ALB/6d26af07f67e87ae/d15677568ea8c731",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:targetgroup/ALBTarget/1318e7c2995ba1ae",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:listener/app/ALB/6d26af07f67e87ae/d15677568ea8c731",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:loadbalancer/app/ALB/6d26af07f67e87ae",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Tf_vpc.aws_subnet.subnets1",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs",
            "module.alb.aws_lb.Applb",
            "module.alb.aws_lb_target_group.myalb",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "myalb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:targetgroup/ALBTarget/1318e7c2995ba1ae",
            "arn_suffix": "targetgroup/ALBTarget/1318e7c2995ba1ae",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:targetgroup/ALBTarget/1318e7c2995ba1ae",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ALBTarget",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0664421df0a6d1c62"
          },
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:targetgroup/ALBTarget/1318e7c2995ba1ae-20230911105740233600000005",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:targetgroup/ALBTarget/1318e7c2995ba1ae",
            "target_id": "i-06afb802a39c8f596"
          },
          "dependencies": [
            "module.Tf_vpc.aws_subnet.subnets1",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs",
            "module.alb.aws_lb_target_group.myalb",
            "module.ec2_instance.aws_instance.instance",
            "module.ec2_instance.aws_security_group.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:targetgroup/ALBTarget/1318e7c2995ba1ae-20230911105739927600000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:targetgroup/ALBTarget/1318e7c2995ba1ae",
            "target_id": "i-04662001c83efae7d"
          },
          "dependencies": [
            "module.Tf_vpc.aws_subnet.subnets1",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs",
            "module.alb.aws_lb_target_group.myalb",
            "module.ec2_instance.aws_instance.instance",
            "module.ec2_instance.aws_security_group.web"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:security-group/sg-00ed7d6e009e9d356",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ed7d6e009e9d356",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "some description",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow traffic for alb",
            "name_prefix": "",
            "owner_id": "387052708321",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_security_rules"
            },
            "tags_all": {
              "Name": "web_security_rules"
            },
            "timeouts": null,
            "vpc_id": "vpc-0664421df0a6d1c62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c147c2e2b026f094",
            "arn": "arn:aws:ec2:eu-north-1:387052708321:instance/i-06afb802a39c8f596",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06afb802a39c8f596",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sharath",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06ed81f6fa262bac5",
            "private_dns": "ip-10-0-1-136.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.136",
            "public_ip": "16.16.67.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0dbbb14f36ff0fa5f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc14758ac5645690",
            "tags": {
              "Name": "EC2-1"
            },
            "tags_all": {
              "Name": "EC2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-06269e83f7cf400bd"
            ]
          },
          "dependencies": [
            "module.Tf_vpc.aws_subnet.subnets1",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs",
            "module.ec2_instance.aws_security_group.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c147c2e2b026f094",
            "arn": "arn:aws:ec2:eu-north-1:387052708321:instance/i-04662001c83efae7d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04662001c83efae7d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sharath",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a2a08ddc4f8e16ba",
            "private_dns": "ip-10-0-2-88.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.88",
            "public_ip": "13.53.175.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ea61ab6924cd0209",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-040eec84c3684185b",
            "tags": {
              "Name": "EC2-2"
            },
            "tags_all": {
              "Name": "EC2-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-06269e83f7cf400bd"
            ]
          },
          "dependencies": [
            "module.Tf_vpc.aws_subnet.subnets1",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs",
            "module.ec2_instance.aws_security_group.web"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:security-group/sg-06269e83f7cf400bd",
            "description": "Allow Inbond Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06269e83f7cf400bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Some Decription",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Some Decription",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Allow Traffic for Web",
            "name_prefix": "",
            "owner_id": "387052708321",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_security_rules"
            },
            "tags_all": {
              "Name": "ec2_security_rules"
            },
            "timeouts": null,
            "vpc_id": "vpc-0664421df0a6d1c62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.jhc_rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:security-group/sg-0696f315d05070975",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0696f315d05070975",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "some description",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06269e83f7cf400bd"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "allow traffic for RDS",
            "name_prefix": "",
            "owner_id": "387052708321",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds_security_rules"
            },
            "tags_all": {
              "Name": "rds_security_rules"
            },
            "timeouts": null,
            "vpc_id": "vpc-0664421df0a6d1c62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.ec2_instance.aws_security_group.web"
          ]
        }
      ]
    }
  ]
}